feat: full upgrade study-abroad content pack with policy-backed data and publish-ready assets

--- a/evidence/lead-magnets/assets/LM001.md
+++ b/evidence/lead-magnets/assets/LM001.md
@@ -5,7 +5,9 @@
 - Status: content_ready_for_delivery
 - Updated: 2026-02-18
 
-## Deliverable Skeleton
+## Deliverable Content
+- Master spec: `evidence/lead-magnets/full-deliverable-specs-20260218.md`
+- Owner action: replace this markdown with final downloadable file URL (if hosted).
 - Usage scenario:
   - 计划在7天内判断“授课型硕士值不值”，且预算敏感、担心回本周期的人群。
 - How to use:
