--- a/evidence/lead-magnets/assets/LM003.md
+++ b/evidence/lead-magnets/assets/LM003.md
@@ -5,7 +5,9 @@
 - Status: content_ready_for_delivery
 - Updated: 2026-02-18
 
-## Deliverable Skeleton
+## Deliverable Content
+- Master spec: `evidence/lead-magnets/full-deliverable-specs-20260218.md`
+- Owner action: replace this markdown with final downloadable file URL (if hosted).
 - Usage scenario:
   - 在15分钟内完成冲稳保组合，不再只看QS做选校。
 - How to use:
