--- a/evidence/lead-magnets/assets/LM004.md
+++ b/evidence/lead-magnets/assets/LM004.md
@@ -5,7 +5,9 @@
 - Status: content_ready_for_delivery
 - Updated: 2026-02-18
 
-## Deliverable Skeleton
+## Deliverable Content
+- Master spec: `evidence/lead-magnets/full-deliverable-specs-20260218.md`
+- Owner action: replace this markdown with final downloadable file URL (if hosted).
 - Usage scenario:
   - 需要做“城市A/B双方案预算”，并提前管理12个月现金流风险。
 - How to use:
