--- a/evidence/lead-magnets/assets/LM005.md
+++ b/evidence/lead-magnets/assets/LM005.md
@@ -5,7 +5,9 @@
 - Status: content_ready_for_delivery
 - Updated: 2026-02-18
 
-## Deliverable Skeleton
+## Deliverable Content
+- Master spec: `evidence/lead-magnets/full-deliverable-specs-20260218.md`
+- Owner action: replace this markdown with final downloadable file URL (if hosted).
 - Usage scenario:
   - 文书初稿“流水账、无重点”时，用于重建可说服招生官的结构。
 - How to use:
