--- a/evidence/lead-magnets/assets/LM006.md
+++ b/evidence/lead-magnets/assets/LM006.md
@@ -5,7 +5,9 @@
 - Status: content_ready_for_delivery
 - Updated: 2026-02-18
 
-## Deliverable Skeleton
+## Deliverable Content
+- Master spec: `evidence/lead-magnets/full-deliverable-specs-20260218.md`
+- Owner action: replace this markdown with final downloadable file URL (if hosted).
 - Usage scenario:
   - GPA不占优但目标不降档时，规划90天补强路径并产出可验证证据。
 - How to use:
