--- a/evidence/lead-magnets/assets/LM008.md
+++ b/evidence/lead-magnets/assets/LM008.md
@@ -5,7 +5,9 @@
 - Status: content_ready_for_delivery
 - Updated: 2026-02-18
 
-## Deliverable Skeleton
+## Deliverable Content
+- Master spec: `evidence/lead-magnets/full-deliverable-specs-20260218.md`
+- Owner action: replace this markdown with final downloadable file URL (if hosted).
 - Usage scenario:
   - 面对多个Offer在“排名、成本、就业”之间冲突时做可解释决策。
 - How to use:
