--- a/evidence/lead-magnets/assets/LM014.md
+++ b/evidence/lead-magnets/assets/LM014.md
@@ -5,7 +5,9 @@
 - Status: content_ready_for_delivery
 - Updated: 2026-02-18
 
-## Deliverable Skeleton
+## Deliverable Content
+- Master spec: `evidence/lead-magnets/full-deliverable-specs-20260218.md`
+- Owner action: replace this markdown with final downloadable file URL (if hosted).
 - Usage scenario:
   - 港硕面试前7-14天集中备考，用于建立高命中问答框架。
 - How to use:
