--- a/evidence/lead-magnets/assets/LM015.md
+++ b/evidence/lead-magnets/assets/LM015.md
@@ -5,7 +5,9 @@
 - Status: content_ready_for_delivery
 - Updated: 2026-02-18
 
-## Deliverable Skeleton
+## Deliverable Content
+- Master spec: `evidence/lead-magnets/full-deliverable-specs-20260218.md`
+- Owner action: replace this markdown with final downloadable file URL (if hosted).
 - Usage scenario:
   - 已拿港硕Offer，需在入学前8周完成“签证+落地+求职前置”并行准备。
 - How to use:
