--- a/evidence/lead-magnets/assets/LM016.md
+++ b/evidence/lead-magnets/assets/LM016.md
@@ -5,7 +5,9 @@
 - Status: content_ready_for_delivery
 - Updated: 2026-02-18
 
-## Deliverable Skeleton
+## Deliverable Content
+- Master spec: `evidence/lead-magnets/full-deliverable-specs-20260218.md`
+- Owner action: replace this markdown with final downloadable file URL (if hosted).
 - Usage scenario:
   - 港硕在读或已录取，需在“留港 vs 回内地”之间做双路径并行决策。
 - How to use:
