--- a/evidence/lead-magnets/assets/LM101.md
+++ b/evidence/lead-magnets/assets/LM101.md
@@ -5,7 +5,9 @@
 - Status: content_ready_for_delivery
 - Updated: 2026-02-18
 
-## Deliverable Skeleton
+## Deliverable Content
+- Master spec: `evidence/lead-magnets/full-deliverable-specs-20260218.md`
+- Owner action: replace this markdown with final downloadable file URL (if hosted).
 - Usage scenario:
   - 英硕商科申请者用来把“选校”直接映射到“目标岗位可执行路径”。
 - How to use:
