--- a/evidence/lead-magnets/assets/LM102.md
+++ b/evidence/lead-magnets/assets/LM102.md
@@ -5,7 +5,9 @@
 - Status: content_ready_for_delivery
 - Updated: 2026-02-18
 
-## Deliverable Skeleton
+## Deliverable Content
+- Master spec: `evidence/lead-magnets/full-deliverable-specs-20260218.md`
+- Owner action: replace this markdown with final downloadable file URL (if hosted).
 - Usage scenario:
   - 英硕转码人群用于补齐“技能证据+项目产出+叙事逻辑”三大短板。
 - How to use:
