--- a/evidence/lead-magnets/assets/LM112.md
+++ b/evidence/lead-magnets/assets/LM112.md
@@ -5,7 +5,9 @@
 - Status: content_ready_for_delivery
 - Updated: 2026-02-18
 
-## Deliverable Skeleton
+## Deliverable Content
+- Master spec: `evidence/lead-magnets/full-deliverable-specs-20260218.md`
+- Owner action: replace this markdown with final downloadable file URL (if hosted).
 - Usage scenario:
   - 港硕转专业申请中“动机强但证据弱”时，重构文书与材料一致性。
 - How to use:
