--- a/evidence/lead-magnets/assets/LM122.md
+++ b/evidence/lead-magnets/assets/LM122.md
@@ -5,7 +5,9 @@
 - Status: content_ready_for_delivery
 - Updated: 2026-02-18
 
-## Deliverable Skeleton
+## Deliverable Content
+- Master spec: `evidence/lead-magnets/full-deliverable-specs-20260218.md`
+- Owner action: replace this markdown with final downloadable file URL (if hosted).
 - Usage scenario:
   - 新加坡跨专业申请中，需把“转向动机”升级为“可验证能力迁移”。
 - How to use:
