--- a/evidence/lead-magnets/assets/LM123.md
+++ b/evidence/lead-magnets/assets/LM123.md
@@ -5,7 +5,9 @@
 - Status: content_ready_for_delivery
 - Updated: 2026-02-18
 
-## Deliverable Skeleton
+## Deliverable Content
+- Master spec: `evidence/lead-magnets/full-deliverable-specs-20260218.md`
+- Owner action: replace this markdown with final downloadable file URL (if hosted).
 - Usage scenario:
   - 新加坡数据岗求职中用于拆解关键节点，提升执行节奏与转化率。
 - How to use:
