--- a/evidence/lead-magnets/assets/LM131.md
+++ b/evidence/lead-magnets/assets/LM131.md
@@ -5,7 +5,9 @@
 - Status: content_ready_for_delivery
 - Updated: 2026-02-18
 
-## Deliverable Skeleton
+## Deliverable Content
+- Master spec: `evidence/lead-magnets/full-deliverable-specs-20260218.md`
+- Owner action: replace this markdown with final downloadable file URL (if hosted).
 - Usage scenario:
   - 澳洲商科申请时对比不同城市的成本与岗位密度，避免“只看学校不看城市”。
 - How to use:
