--- a/evidence/lead-magnets/assets/LM133.md
+++ b/evidence/lead-magnets/assets/LM133.md
@@ -5,7 +5,9 @@
 - Status: content_ready_for_delivery
 - Updated: 2026-02-18
 
-## Deliverable Skeleton
+## Deliverable Content
+- Master spec: `evidence/lead-magnets/full-deliverable-specs-20260218.md`
+- Owner action: replace this markdown with final downloadable file URL (if hosted).
 - Usage scenario:
   - 澳洲入学前希望提前启动实习求职，通过12周SOP建立稳定执行节奏。
 - How to use:
