--- a/evidence/lead-magnets/assets/LM002.md
+++ b/evidence/lead-magnets/assets/LM002.md
@@ -5,7 +5,9 @@
 - Status: content_ready_for_delivery
 - Updated: 2026-02-18
 
-## Deliverable Skeleton
+## Deliverable Content
+- Master spec: `evidence/lead-magnets/full-deliverable-specs-20260218.md`
+- Owner action: replace this markdown with final downloadable file URL (if hosted).
 - Usage scenario:
   - 30分钟内判断一年制项目是否适配，避免“先申再后悔”。
 - How to use:
