--- a/evidence/lead-magnets/assets/LM007.md
+++ b/evidence/lead-magnets/assets/LM007.md
@@ -5,7 +5,9 @@
 - Status: content_ready_for_delivery
 - Updated: 2026-02-18
 
-## Deliverable Skeleton
+## Deliverable Content
+- Master spec: `evidence/lead-magnets/full-deliverable-specs-20260218.md`
+- Owner action: replace this markdown with final downloadable file URL (if hosted).
 - Usage scenario:
   - 需要把“入学前-在读期-毕业季”求职动作前置，避免错过窗口。
 - How to use:
