--- a/evidence/lead-magnets/assets/LM103.md
+++ b/evidence/lead-magnets/assets/LM103.md
@@ -5,7 +5,9 @@
 - Status: content_ready_for_delivery
 - Updated: 2026-02-18
 
-## Deliverable Skeleton
+## Deliverable Content
+- Master spec: `evidence/lead-magnets/full-deliverable-specs-20260218.md`
+- Owner action: replace this markdown with final downloadable file URL (if hosted).
 - Usage scenario:
   - 英硕求职冲刺阶段，需按周执行并持续复盘，避免“临时抱佛脚”。
 - How to use:
