--- a/evidence/lead-magnets/assets/LM111.md
+++ b/evidence/lead-magnets/assets/LM111.md
@@ -5,7 +5,9 @@
 - Status: content_ready_for_delivery
 - Updated: 2026-02-18
 
-## Deliverable Skeleton
+## Deliverable Content
+- Master spec: `evidence/lead-magnets/full-deliverable-specs-20260218.md`
+- Owner action: replace this markdown with final downloadable file URL (if hosted).
 - Usage scenario:
   - 港硕商科面试前集中训练，用于提升回答结构化与项目匹配度。
 - How to use:
