--- a/evidence/lead-magnets/assets/LM113.md
+++ b/evidence/lead-magnets/assets/LM113.md
@@ -5,7 +5,9 @@
 - Status: content_ready_for_delivery
 - Updated: 2026-02-18
 
-## Deliverable Skeleton
+## Deliverable Content
+- Master spec: `evidence/lead-magnets/full-deliverable-specs-20260218.md`
+- Owner action: replace this markdown with final downloadable file URL (if hosted).
 - Usage scenario:
   - 港硕录取后希望“入学适应”和“求职启动”并行推进，避免开学后手忙脚乱。
 - How to use:
