--- a/evidence/lead-magnets/assets/LM121.md
+++ b/evidence/lead-magnets/assets/LM121.md
@@ -5,7 +5,9 @@
 - Status: content_ready_for_delivery
 - Updated: 2026-02-18
 
-## Deliverable Skeleton
+## Deliverable Content
+- Master spec: `evidence/lead-magnets/full-deliverable-specs-20260218.md`
+- Owner action: replace this markdown with final downloadable file URL (if hosted).
 - Usage scenario:
   - 新加坡商科申请者需要把签证流程和求职节奏打通，避免时间冲突。
 - How to use:
