feat: complete full improvement round 8 with delivery links and policy recheck

--- a/evidence/lead-magnets/assets/LM001.md
+++ b/evidence/lead-magnets/assets/LM001.md
@@ -7,7 +7,7 @@
 
 ## Deliverable Content
 - Master spec: `evidence/lead-magnets/full-deliverable-specs-20260218.md`
-- Owner action: replace this markdown with final downloadable file URL (if hosted).
+- Delivery link index: `evidence/lead-magnets/index.md` (可直接发送`Direct Link`列).
 - Usage scenario:
   - 计划在7天内判断“授课型硕士值不值”，且预算敏感、担心回本周期的人群。
 - How to use:
