--- a/evidence/lead-magnets/assets/LM002.md
+++ b/evidence/lead-magnets/assets/LM002.md
@@ -7,7 +7,7 @@
 
 ## Deliverable Content
 - Master spec: `evidence/lead-magnets/full-deliverable-specs-20260218.md`
-- Owner action: replace this markdown with final downloadable file URL (if hosted).
+- Delivery link index: `evidence/lead-magnets/index.md` (可直接发送`Direct Link`列).
 - Usage scenario:
   - 30分钟内判断一年制项目是否适配，避免“先申再后悔”。
 - How to use:
