--- a/evidence/lead-magnets/assets/LM004.md
+++ b/evidence/lead-magnets/assets/LM004.md
@@ -7,7 +7,7 @@
 
 ## Deliverable Content
 - Master spec: `evidence/lead-magnets/full-deliverable-specs-20260218.md`
-- Owner action: replace this markdown with final downloadable file URL (if hosted).
+- Delivery link index: `evidence/lead-magnets/index.md` (可直接发送`Direct Link`列).
 - Usage scenario:
   - 需要做“城市A/B双方案预算”，并提前管理12个月现金流风险。
 - How to use:
