--- a/evidence/lead-magnets/assets/LM006.md
+++ b/evidence/lead-magnets/assets/LM006.md
@@ -7,7 +7,7 @@
 
 ## Deliverable Content
 - Master spec: `evidence/lead-magnets/full-deliverable-specs-20260218.md`
-- Owner action: replace this markdown with final downloadable file URL (if hosted).
+- Delivery link index: `evidence/lead-magnets/index.md` (可直接发送`Direct Link`列).
 - Usage scenario:
   - GPA不占优但目标不降档时，规划90天补强路径并产出可验证证据。
 - How to use:
