--- a/evidence/lead-magnets/assets/LM007.md
+++ b/evidence/lead-magnets/assets/LM007.md
@@ -7,7 +7,7 @@
 
 ## Deliverable Content
 - Master spec: `evidence/lead-magnets/full-deliverable-specs-20260218.md`
-- Owner action: replace this markdown with final downloadable file URL (if hosted).
+- Delivery link index: `evidence/lead-magnets/index.md` (可直接发送`Direct Link`列).
 - Usage scenario:
   - 需要把“入学前-在读期-毕业季”求职动作前置，避免错过窗口。
 - How to use:
