--- a/evidence/lead-magnets/assets/LM008.md
+++ b/evidence/lead-magnets/assets/LM008.md
@@ -7,7 +7,7 @@
 
 ## Deliverable Content
 - Master spec: `evidence/lead-magnets/full-deliverable-specs-20260218.md`
-- Owner action: replace this markdown with final downloadable file URL (if hosted).
+- Delivery link index: `evidence/lead-magnets/index.md` (可直接发送`Direct Link`列).
 - Usage scenario:
   - 面对多个Offer在“排名、成本、就业”之间冲突时做可解释决策。
 - How to use:
