--- a/evidence/lead-magnets/assets/LM009.md
+++ b/evidence/lead-magnets/assets/LM009.md
@@ -7,7 +7,7 @@
 
 ## Deliverable Content
 - Master spec: `evidence/lead-magnets/full-deliverable-specs-20260218.md`
-- Owner action: replace this markdown with final downloadable file URL (if hosted).
+- Delivery link index: `evidence/lead-magnets/index.md` (可直接发送`Direct Link`列).
 - Usage scenario:
   - 私信前快速收集关键变量，把泛咨询线索分流成可成交线索。
 - How to use:
