--- a/evidence/lead-magnets/assets/LM014.md
+++ b/evidence/lead-magnets/assets/LM014.md
@@ -7,7 +7,7 @@
 
 ## Deliverable Content
 - Master spec: `evidence/lead-magnets/full-deliverable-specs-20260218.md`
-- Owner action: replace this markdown with final downloadable file URL (if hosted).
+- Delivery link index: `evidence/lead-magnets/index.md` (可直接发送`Direct Link`列).
 - Usage scenario:
   - 港硕面试前7-14天集中备考，用于建立高命中问答框架。
 - How to use:
