--- a/evidence/lead-magnets/assets/LM015.md
+++ b/evidence/lead-magnets/assets/LM015.md
@@ -7,7 +7,7 @@
 
 ## Deliverable Content
 - Master spec: `evidence/lead-magnets/full-deliverable-specs-20260218.md`
-- Owner action: replace this markdown with final downloadable file URL (if hosted).
+- Delivery link index: `evidence/lead-magnets/index.md` (可直接发送`Direct Link`列).
 - Usage scenario:
   - 已拿港硕Offer，需在入学前8周完成“签证+落地+求职前置”并行准备。
 - How to use:
