--- a/evidence/lead-magnets/assets/LM016.md
+++ b/evidence/lead-magnets/assets/LM016.md
@@ -7,7 +7,7 @@
 
 ## Deliverable Content
 - Master spec: `evidence/lead-magnets/full-deliverable-specs-20260218.md`
-- Owner action: replace this markdown with final downloadable file URL (if hosted).
+- Delivery link index: `evidence/lead-magnets/index.md` (可直接发送`Direct Link`列).
 - Usage scenario:
   - 港硕在读或已录取，需在“留港 vs 回内地”之间做双路径并行决策。
 - How to use:
