--- a/evidence/lead-magnets/assets/LM017.md
+++ b/evidence/lead-magnets/assets/LM017.md
@@ -7,7 +7,7 @@
 
 ## Deliverable Content
 - Master spec: `evidence/lead-magnets/full-deliverable-specs-20260218.md`
-- Owner action: replace this markdown with final downloadable file URL (if hosted).
+- Delivery link index: `evidence/lead-magnets/index.md` (可直接发送`Direct Link`列).
 - Usage scenario:
   - 新加坡项目申请者或在读生，用于“留新/回国”双路径终选。
 - How to use:
