--- a/evidence/lead-magnets/assets/LM101.md
+++ b/evidence/lead-magnets/assets/LM101.md
@@ -7,7 +7,7 @@
 
 ## Deliverable Content
 - Master spec: `evidence/lead-magnets/full-deliverable-specs-20260218.md`
-- Owner action: replace this markdown with final downloadable file URL (if hosted).
+- Delivery link index: `evidence/lead-magnets/index.md` (可直接发送`Direct Link`列).
 - Usage scenario:
   - 英硕商科申请者用来把“选校”直接映射到“目标岗位可执行路径”。
 - How to use:
