--- a/evidence/lead-magnets/assets/LM102.md
+++ b/evidence/lead-magnets/assets/LM102.md
@@ -7,7 +7,7 @@
 
 ## Deliverable Content
 - Master spec: `evidence/lead-magnets/full-deliverable-specs-20260218.md`
-- Owner action: replace this markdown with final downloadable file URL (if hosted).
+- Delivery link index: `evidence/lead-magnets/index.md` (可直接发送`Direct Link`列).
 - Usage scenario:
   - 英硕转码人群用于补齐“技能证据+项目产出+叙事逻辑”三大短板。
 - How to use:
