--- a/evidence/lead-magnets/assets/LM103.md
+++ b/evidence/lead-magnets/assets/LM103.md
@@ -7,7 +7,7 @@
 
 ## Deliverable Content
 - Master spec: `evidence/lead-magnets/full-deliverable-specs-20260218.md`
-- Owner action: replace this markdown with final downloadable file URL (if hosted).
+- Delivery link index: `evidence/lead-magnets/index.md` (可直接发送`Direct Link`列).
 - Usage scenario:
   - 英硕求职冲刺阶段，需按周执行并持续复盘，避免“临时抱佛脚”。
 - How to use:
