--- a/evidence/lead-magnets/assets/LM111.md
+++ b/evidence/lead-magnets/assets/LM111.md
@@ -7,7 +7,7 @@
 
 ## Deliverable Content
 - Master spec: `evidence/lead-magnets/full-deliverable-specs-20260218.md`
-- Owner action: replace this markdown with final downloadable file URL (if hosted).
+- Delivery link index: `evidence/lead-magnets/index.md` (可直接发送`Direct Link`列).
 - Usage scenario:
   - 港硕商科面试前集中训练，用于提升回答结构化与项目匹配度。
 - How to use:
