--- a/evidence/lead-magnets/assets/LM113.md
+++ b/evidence/lead-magnets/assets/LM113.md
@@ -7,7 +7,7 @@
 
 ## Deliverable Content
 - Master spec: `evidence/lead-magnets/full-deliverable-specs-20260218.md`
-- Owner action: replace this markdown with final downloadable file URL (if hosted).
+- Delivery link index: `evidence/lead-magnets/index.md` (可直接发送`Direct Link`列).
 - Usage scenario:
   - 港硕录取后希望“入学适应”和“求职启动”并行推进，避免开学后手忙脚乱。
 - How to use:
