--- a/evidence/lead-magnets/assets/LM121.md
+++ b/evidence/lead-magnets/assets/LM121.md
@@ -7,7 +7,7 @@
 
 ## Deliverable Content
 - Master spec: `evidence/lead-magnets/full-deliverable-specs-20260218.md`
-- Owner action: replace this markdown with final downloadable file URL (if hosted).
+- Delivery link index: `evidence/lead-magnets/index.md` (可直接发送`Direct Link`列).
 - Usage scenario:
   - 新加坡商科申请者需要把签证流程和求职节奏打通，避免时间冲突。
 - How to use:
