--- a/evidence/lead-magnets/assets/LM131.md
+++ b/evidence/lead-magnets/assets/LM131.md
@@ -7,7 +7,7 @@
 
 ## Deliverable Content
 - Master spec: `evidence/lead-magnets/full-deliverable-specs-20260218.md`
-- Owner action: replace this markdown with final downloadable file URL (if hosted).
+- Delivery link index: `evidence/lead-magnets/index.md` (可直接发送`Direct Link`列).
 - Usage scenario:
   - 澳洲商科申请时对比不同城市的成本与岗位密度，避免“只看学校不看城市”。
 - How to use:
