--- a/evidence/lead-magnets/assets/LM133.md
+++ b/evidence/lead-magnets/assets/LM133.md
@@ -7,7 +7,7 @@
 
 ## Deliverable Content
 - Master spec: `evidence/lead-magnets/full-deliverable-specs-20260218.md`
-- Owner action: replace this markdown with final downloadable file URL (if hosted).
+- Delivery link index: `evidence/lead-magnets/index.md` (可直接发送`Direct Link`列).
 - Usage scenario:
   - 澳洲入学前希望提前启动实习求职，通过12周SOP建立稳定执行节奏。
 - How to use:
