--- a/evidence/lead-magnets/assets/LM003.md
+++ b/evidence/lead-magnets/assets/LM003.md
@@ -7,7 +7,7 @@
 
 ## Deliverable Content
 - Master spec: `evidence/lead-magnets/full-deliverable-specs-20260218.md`
-- Owner action: replace this markdown with final downloadable file URL (if hosted).
+- Delivery link index: `evidence/lead-magnets/index.md` (可直接发送`Direct Link`列).
 - Usage scenario:
   - 在15分钟内完成冲稳保组合，不再只看QS做选校。
 - How to use:
