--- a/evidence/lead-magnets/assets/LM005.md
+++ b/evidence/lead-magnets/assets/LM005.md
@@ -7,7 +7,7 @@
 
 ## Deliverable Content
 - Master spec: `evidence/lead-magnets/full-deliverable-specs-20260218.md`
-- Owner action: replace this markdown with final downloadable file URL (if hosted).
+- Delivery link index: `evidence/lead-magnets/index.md` (可直接发送`Direct Link`列).
 - Usage scenario:
   - 文书初稿“流水账、无重点”时，用于重建可说服招生官的结构。
 - How to use:
