--- a/evidence/lead-magnets/assets/LM112.md
+++ b/evidence/lead-magnets/assets/LM112.md
@@ -7,7 +7,7 @@
 
 ## Deliverable Content
 - Master spec: `evidence/lead-magnets/full-deliverable-specs-20260218.md`
-- Owner action: replace this markdown with final downloadable file URL (if hosted).
+- Delivery link index: `evidence/lead-magnets/index.md` (可直接发送`Direct Link`列).
 - Usage scenario:
   - 港硕转专业申请中“动机强但证据弱”时，重构文书与材料一致性。
 - How to use:
