--- a/evidence/lead-magnets/assets/LM122.md
+++ b/evidence/lead-magnets/assets/LM122.md
@@ -7,7 +7,7 @@
 
 ## Deliverable Content
 - Master spec: `evidence/lead-magnets/full-deliverable-specs-20260218.md`
-- Owner action: replace this markdown with final downloadable file URL (if hosted).
+- Delivery link index: `evidence/lead-magnets/index.md` (可直接发送`Direct Link`列).
 - Usage scenario:
   - 新加坡跨专业申请中，需把“转向动机”升级为“可验证能力迁移”。
 - How to use:
