--- a/evidence/lead-magnets/assets/LM123.md
+++ b/evidence/lead-magnets/assets/LM123.md
@@ -7,7 +7,7 @@
 
 ## Deliverable Content
 - Master spec: `evidence/lead-magnets/full-deliverable-specs-20260218.md`
-- Owner action: replace this markdown with final downloadable file URL (if hosted).
+- Delivery link index: `evidence/lead-magnets/index.md` (可直接发送`Direct Link`列).
 - Usage scenario:
   - 新加坡数据岗求职中用于拆解关键节点，提升执行节奏与转化率。
 - How to use:
