--- a/evidence/lead-magnets/assets/LM132.md
+++ b/evidence/lead-magnets/assets/LM132.md
@@ -7,7 +7,7 @@
 
 ## Deliverable Content
 - Master spec: `evidence/lead-magnets/full-deliverable-specs-20260218.md`
-- Owner action: replace this markdown with final downloadable file URL (if hosted).
+- Delivery link index: `evidence/lead-magnets/index.md` (可直接发送`Direct Link`列).
 - Usage scenario:
   - 澳洲转码人群在“选课-项目-实习”脱节时，用于重建岗位导向路径。
 - How to use:
